--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: model-promotion
+name: ml-model-promotion
 channels:
   - conda-forge
   - defaults
@@ -67,7 +67,7 @@ dependencies:
     - httplib2==0.20.4
     - idna==3.3
     - ipykernel==6.12.1
-    - ipython==8.2.0
+    - ipython==7.33.0
     - jedi==0.18.1
     - Jinja2==3.1.1
     - joblib==1.1.0
