--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
 absl-py==1.0.0
-asttokens==2.0.5
 attrs==21.4.0
-backcall==0.2.0
 cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.12
-click==8.1.2
+click==8.1.3
 cloudpickle==2.0.0
-cycler==0.11.0
-data-describe==0.1.0b3
-debugpy==1.6.0
-decorator==5.1.1
 Deprecated==1.2.13
 docstring-parser==0.14.1
-entrypoints==0.4
-executing==0.8.3
 fire==0.4.0
-fonttools==4.32.0
 google-api-core==2.7.2
 google-api-python-client==1.12.11
 google-auth==1.35.0
@@ -36,69 +27,42 @@ grpcio==1.44.0
 grpcio-status==1.44.0
 httplib2==0.20.4
 idna==3.3
-ipykernel==6.12.1
-ipython==7.33.0
-jedi==0.18.1
-Jinja2==3.1.1
 joblib==1.1.0
 jsonschema==3.2.0
-jupyter-client==7.2.2
-jupyter-core==4.9.2
 kfp==1.8.12
 kfp-pipeline-spec==0.1.14
 kfp-server-api==1.8.1
-kiwisolver==1.4.2
 kubernetes==18.20.0
-MarkupSafe==2.1.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-nest-asyncio==1.5.5
 numpy==1.22.3
 oauthlib==3.2.0
 packaging==21.3
 pandas==1.4.2
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.1.0
-plotly==5.7.0
-prompt-toolkit==3.0.29
 proto-plus==1.20.3
 protobuf==3.20.1
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pydantic==1.9.0
-Pygments==2.11.2
 pyparsing==3.0.8
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==5.4.1
-pyzmq==22.3.0
 requests==2.27.1
 requests-oauthlib==1.3.1
 requests-toolbelt==0.9.1
 rsa==4.8
 scikit-learn==1.0.2
 scipy==1.8.0
-seaborn==0.11.2
 six==1.16.0
-stack-data==0.2.0
+sklearn==0.0
 strip-hints==0.1.10
 tabulate==0.8.9
-tenacity==8.0.1
 termcolor==1.1.0
 threadpoolctl==3.1.0
-tornado==6.1
-traitlets==5.1.1
 typer==0.4.1
 typing_extensions==4.2.0
 uritemplate==3.0.1
 urllib3==1.26.9
-wcwidth==0.2.5
 websocket-client==1.3.2
 wrapt==1.14.0
-xgboost==1.5.2
+xgboost==1.6.0
