--- a/requirements.txt
+++ b/requirements.txt
@@ -33,10 +33,10 @@ kfp==1.8.12
 kfp-pipeline-spec==0.1.14
 kfp-server-api==1.8.1
 kubernetes==18.20.0
-numpy==1.21.6
+numpy
 oauthlib==3.2.0
 packaging==21.3
-pandas==1.3.5
+pandas
 proto-plus==1.20.3
 protobuf==3.20.1
 pyasn1==0.4.8
@@ -52,15 +52,15 @@ requests-oauthlib==1.3.1
 requests-toolbelt==0.9.1
 rsa==4.8
 scikit-learn==1.0.2
-scipy==1.7.3
-six==1.16.0
+scipy
+3six==1.16.0
 sklearn==0.0
 strip-hints==0.1.10
 tabulate==0.8.9
 termcolor==1.1.0
 threadpoolctl==3.1.0
 typer==0.4.1
-typing_extensions==4.2.0
+typing_extensions
 uritemplate==3.0.1
 urllib3==1.26.9
 websocket-client==1.3.2
