--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ requests-toolbelt==0.9.1
 rsa==4.8
 scikit-learn==1.0.2
 scipy
-3six==1.16.0
+six==1.16.0
 sklearn==0.0
 strip-hints==0.1.10
 tabulate==0.8.9
