--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ substitutions:
   _IMAGE_NAME: "github.com/bieniekalexander/ml-model-promotion"
   _TAG_NAME: "$COMMIT_SHA"
   _TRAINING_JOB_NAME: "${REPO_NAME}-${COMMIT_SHA}-build"
-  _IMAGE_URI: "gcr.io/$PROJECT_ID/${_IMAGE_NAME}:${_TAG_NAME}"
+  _IMAGE_URI: "gcr.io/${PROJECT_ID}/${_IMAGE_NAME}:${_TAG_NAME}"
 timeout: 3600s
 steps:
 # build the docker image
