--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,6 +9,7 @@ substitutions:
   _TAG_NAME: "${COMMIT_SHA}"
   _TRAINING_JOB_NAME: "${REPO_NAME}-${COMMIT_SHA}-build"
   _IMAGE_URI: "gcr.io/${PROJECT_ID}/${_IMAGE_NAME}:${_TAG_NAME}"
+  _REGION: us-east1
 timeout: 3600s
 steps:
 # build the docker image
@@ -27,4 +28,4 @@ steps:
   - "create"
   - "--worker-pool-spec=executor-image-uri=${_IMAGE_URI},machine-type=n2-standard-4"
   - "--display-name=${_TRAINING_JOB_NAME}"  
-  - "--region=${LOCATION}"
+  - "--region=${_REGION}"
