--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -56,11 +56,13 @@ steps:
         --region=${_REGION} \
         | grep describe | sed 's|.*/||' > /workspace/custom_job_id >&2
 
+      echo "gcloud ai custom-jobs describe projects/${PROJECT_NUMBER}/locations/${_REGION}/customJobs/$(</workspace/custom_job_id)" # TODO debugging, remove
       until gcloud ai custom-jobs describe projects/${PROJECT_NUMBER}/locations/${_REGION}/customJobs/$(</workspace/custom_job_id) | grep -e "^endTime:"
       do
-        sleep 10
+        sleep 30
       done
       
+      echo done waiting for job # TODO debugging, remove
       JOB_STATE=$(gcloud ai custom-jobs describe projects/${PROJECT_NUMBER}/locations/${_REGION}/customJobs/$(</workspace/custom_job_id) | grep -e "^state:" | awk '{print $2}')
 
       if [ $$JOB_STATE != "JOB_STATE_SUCCEEDED" ] ; then
