--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -129,7 +129,7 @@ steps:
         --display-name=${_MODEL_NAME} \
         --region=$_REGION
 
-        gcloud ai models list --region=${_REGION} --format=json \
+        gcloud ai models list --region=${_REGION} --format=json > /workspace/gcloud_response.json
         python /workspace/get_id_by_display_name.py --display-name=${_MODEL_NAME} --json-path=/workspace/gcloud_response.json > /workspace/model_id 
       fi
 
