commenting out some code, safely collecting gcloud list results

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -52,8 +52,12 @@ steps:
       def get_id_by_display_name(lst, display_name):
         """ Find the json object with the specified display name, and return the id field at the end of the object's name """
         items = list(filter(lambda x: x['displayName']==display_name, lst))
-        item = items[0]
-        return item['name'].rsplit('/', 1)[-1]
+
+        if items:
+          item = items[0]
+          return item['name'].rsplit('/', 1)[-1]
+        else:
+          return ""
 
 
       if __name__ == "__main__":
@@ -120,7 +124,7 @@ steps:
 
       if [ -s /workspace/model_id ]; then
         echo "Model exists, TODO update model"
-        gcloud ai models update ... # TODO update when model update command exists
+        # gcloud ai models update ... # TODO update when model update command exists
       else
         echo "Model does not exist, uploading new model"
         gcloud ai models upload \
@@ -136,6 +140,7 @@ steps:
 
 # https://cloud.google.com/sdk/gcloud/reference/ai/endpoints
 # TODO how are we selecting the right container to build from? It's hardcoded right now
+# TODO unpickling issue? https://github.com/aws/amazon-sagemaker-examples/issues/2952
 - id: "Create/Update a Vertex AI Endpoint and deploy the new model to it"
   name: gcr.io/cloud-builders/gcloud
   entrypoint: /bin/bash
