--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,8 +10,8 @@ substitutions:
   _IMAGE_URI: "gcr.io/${PROJECT_ID}/${_IMAGE_NAME}:${_TAG_NAME}"
   _REGION: us-east1
   _MODEL_GCS_PATH: "gs://mw-ds-model-promotion-poc-res/census_model"
-  _MODEL_NAME: "census_model-${_TAG_NAME}"
-  _ENDPOINT_NAME: "${_MODEL_NAME}-endpoint"
+  _MODEL_NAME: "census_model_${_TAG_NAME}"
+  _ENDPOINT_NAME: "census_model_endpoint"
 timeout: 1800s
 
 steps:
@@ -151,7 +151,6 @@ steps:
 
 # https://cloud.google.com/sdk/gcloud/reference/ai/endpoints
 # TODO how are we selecting the right container to build from? It's hardcoded right now
-# TODO unpickling issue? https://github.com/aws/amazon-sagemaker-examples/issues/2952
 - id: "Create/Update a Vertex AI Endpoint and deploy the new model to it"
   name: gcr.io/cloud-builders/gcloud
   entrypoint: /bin/bash
